--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "express": "node ./api"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "@mdi/light-font": "^0.2.63",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "pg": "^8.11.1",
     "pinia": "^2.1.3",
+    "sass": "^1.63.6",
     "vite-plugin-externals": "^0.6.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
